--- a/app/src/main/res/layout/todo_and_done.xml
+++ b/app/src/main/res/layout/todo_and_done.xml
@@ -12,6 +12,7 @@
         app:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
