checkbox status with update database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtTodo" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/txtDone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -78,7 +78,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/txtDone" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
