--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="colorHomeBackground">#eeeeee</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorPink">#ef5350</color>
     <color name="colorBlue">#00bcd4</color>
