--- a/app/src/main/res/layout/fragment_todo_add.xml
+++ b/app/src/main/res/layout/fragment_todo_add.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#7e57c2"
+        android:background="@color/colorPurple"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,11 +17,12 @@
         app:navigationIcon="@drawable/back">
 
         <TextView
+            android:id="@+id/txtTopTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/add_new_task"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorWhite"
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
